create user menu icon and search input container

--- a/app/src/containers/layout/mainLayout/styles.css
+++ b/app/src/containers/layout/mainLayout/styles.css
@@ -1,5 +1,5 @@
 .main-layout-container {
-  @apply bg-dark-grey flex-3 h-screen;
+  @apply bg-dark-grey flex-3 h-screen border-l border-l-light-grey;
   background-image: url("https://web.telegram.org/z/chat-bg-pattern-dark.ad38368a9e8140d0ac7d..png");
   mix-blend-mode: unset;
   background-size: 510px auto;
