--- a/app/src/components/userMenu/userMenu.less
+++ b/app/src/components/userMenu/userMenu.less
@@ -1,10 +1,10 @@
 .user-dropdown-menu {
-  @apply flex-1 flex flex-row justify-center items-center;
+  @apply flex-1;
 
   .menu-icon {
-    @apply h-10 w-10;
+    @apply relative h-10 w-10 flex flex-row justify-center items-center bg-gray/50 rounded;
     svg {
-      @apply text-gray h-6 w-6 flex justify-center;
+      @apply text-gray h-6 w-6 flex justify-center font-bold;
     }
   }
 }
