--- a/app/src/components/userMenuButton/userMenuButton.less
+++ b/app/src/components/userMenuButton/userMenuButton.less
@@ -8,4 +8,8 @@
       @apply text-gray h-6 w-6 flex justify-center font-bold;
     }
   }
+
+  .active {
+    @apply bg-gray/10 rounded-full overflow-hidden;
+  }
 }
