make button and menu reusable

--- a/app/src/layout/sidebar/userMenu/userMenu.less
+++ b/app/src/layout/sidebar/userMenu/userMenu.less
@@ -1,8 +1,22 @@
+.user-dropdown-menu {
+  @apply flex-1;
+
+  .menu-icon-btn {
+    transition: background-color 0.15s ease;
+    @apply relative h-10 w-10 flex flex-row justify-center items-center hover:bg-gray/10 rounded-full overflow-hidden;
+    svg {
+      @apply text-gray h-6 w-6 flex justify-center font-bold;
+    }
+  }
+
+  .active {
+    @apply bg-gray/10 rounded-full overflow-hidden;
+  }
+}
+
 .user-menu-container {
   max-height: calc(100 * 7.89px - 3.75rem);
   padding: 0.25rem 0;
-  transition: opacity 0.2s cubic-bezier(0.2, 0, 0.2, 1),
-    transform 0.2s cubic-bezier(0.2, 0, 0.2, 1);
   @apply absolute top-0 bottom-0 h-screen;
 
   &:not(.show) {
@@ -16,17 +30,14 @@
   .user-menu-options {
     box-shadow: 0 0.25rem 0.5rem 0.125rem rgba(16, 16, 16, 0.611765);
     backdrop-filter: blur(10px);
+    transition: all 0.3 ease;
     &:not(.open) {
-      animation: close-animation 200ms forwards;
+      animation: close-animation 150ms forwards;
     }
     @apply z-[var(--z-modal)] absolute top-[52px] left-3 rounded-xl bg-sidebar-gray/80 min-w-[17rem] py-1;
   }
 }
 
 .open {
-  animation: open-animation 200ms forwards;
-}
-
-.close {
-  animation: close-animation 200ms forwards;
+  animation: open-animation 150ms forwards;
 }
